Web Inspector: Cannot edit elements commented with <!-- https://bugs.webkit.org/show_bug.cgi?id=71357

Reviewed by Pavel Feldman.

Source/WebCore:

* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::getOuterHTML):
(WebCore::InspectorDOMAgent::setOuterHTML):
* inspector/front-end/ElementsTreeOutline.js:
(WebInspector.ElementsTreeOutline.prototype.populateContextMenu):
(WebInspector.ElementsTreeElement.prototype._populateTagContextMenu):
(WebInspector.ElementsTreeElement.prototype._populateTextContextMenu):
(WebInspector.ElementsTreeElement.prototype._populateNodeContextMenu):

LayoutTests:

* inspector/elements/edit-dom-actions-expected.txt:
* inspector/elements/edit-dom-actions.html:


Canonical link: https://commits.webkit.org/87981@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99401 268f45cc-cd09-0410-ab3c-d52691b4dbfc